--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@trpc/react-query": "^10.7.0",
     "@trpc/server": "^10.7.0",
     "aws-sdk": "^2.1343.0",
+    "chart.js": "^4.2.1",
     "chonky": "^2.3.2",
     "chonky-icon-fontawesome": "^2.3.2",
     "classnames": "^2.3.2",
     "next": "13.1.1",
     "next-auth": "^4.18.7",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.1",
