--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@trpc/next": "^10.7.0",
     "@trpc/react-query": "^10.7.0",
     "@trpc/server": "^10.7.0",
+    "@types/react-table": "^7.7.14",
     "aws-sdk": "^2.1343.0",
     "chart.js": "^4.2.1",
     "chonky": "^2.3.2",
     "chonky-icon-fontawesome": "^2.3.2",
     "classnames": "^2.3.2",
+    "faker": "^6.6.6",
     "next": "13.1.1",
     "next-auth": "^4.18.7",
     "react": "18.2.0",
@@ -38,6 +40,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.1",
     "react-select": "^5.7.0",
+    "react-table": "^7.8.0",
     "styled-components": "^5.3.6",
     "styled-icons": "^10.47.0",
     "superjson": "1.9.1",
